--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
   <title>Muhammad Habib_ullah</title>
-  <link rel="icon" href="D:\habiblogo.PNG">
+  <link rel="icon" href="maincss\img\habiblogo.PNG">
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -28,7 +28,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="C:\Users\DELL\Downloads\portfolio-bootstarp\assets\css\style.css" rel="stylesheet">
+  <link href="maincss\css\style.css" rel="stylesheet">
  
 </head>
 <body>
