--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
   <title>Muhammad Habib_ullah</title>
-  <link rel="icon" href="maincss\img\habiblogo.PNG">
+  <link rel="icon" href="img\habiblogo.PNG">
   <meta content="" name="description">
   <meta content="" name="keywords">
 
