--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
   <title>Muhammad Habib_ullah</title>
-  <link rel="icon" href="img\habiblogo.PNG">
+  <link rel="icon" href="maincss\img\habiblogo.PNG">
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <img src="C:\Users\DELL\Downloads\habibullah_portfolio\images\pp.jpg" alt="habibi"
+    <img src="maincss\img\pp.jpg" alt="habibi"
             class="img-fluid rounded-circle">
           <h1 class="text-light"><a href="index.html">Muhammad Habib</a></h1>
 
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello!! My Name Is Muhammad Habibullah,i'm from Karachi Pakistan.I am student Of bachelors In Information Technology at
+          <p>Muhammad Habibullah,i'm from Karachi Pakistan.I am student Of bachelors In Information Technology at
           Benazir Bhutoo shaheed University.Now Its My begginer Level Of Web development .So forgive me if you find something wrong or mistakes there, i just believe in hard & smart working.</p>
         </div>
         
@@ -517,7 +517,7 @@
               disappoint you.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+            <img src="maincss/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
             <h3>Mustafa Ali</h3>
             <h4>Ceo &amp; Founder</h4>
           </div>
@@ -530,7 +530,7 @@
               <b>All The BEST MAN</b> 
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+            <img src="maincss/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
             <h3>Jena Karlis</h3>
             <h4>Teacher Of Oxford</h4>
           </div>
@@ -542,7 +542,7 @@
               <b>Highly Recommended</b>
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+            <img src="maincss/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Junaid Akram </h3>
             <h4>Freelancer</h4>
           </div>
@@ -553,7 +553,7 @@
               I am his childhood Friend and i know Habibullah Is Loyal and committed in His Work especially when someone gives him a paid projects,he try always his best.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+            <img src="maincss/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
             <h3>Irfan Haider</h3>
             <h4>Friend</h4>
           </div>
