--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="maincss/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="maincss/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="maincss/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="maincss/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="maincss/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="maincss/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="maincss\css\style.css" rel="stylesheet">
@@ -84,13 +84,13 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Muhammad Habibullah,i'm from Karachi Pakistan.I am student Of bachelors In Information Technology at
+          <p>Hello!! My Self Muhammad Habibullah,i'm from Karachi Pakistan.I am student Of bachelors In Information Technology at
           Benazir Bhutoo shaheed University.Now Its My begginer Level Of Web development .So forgive me if you find something wrong or mistakes there, i just believe in hard & smart working.</p>
         </div>
         
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="C:\Users\DELL\Downloads\habibi.jpg" class="img-fluid" alt="habib" >
+            <img src="maincss\img\habibi.jpg" class="img-fluid" alt="habib" >
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3>
@@ -232,9 +232,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Java<i class="val">95%</i></span>
+              <span class="skill">Java<i class="val">51%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="49" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -666,20 +666,20 @@
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="maincss/vendor/jquery/jquery.min.js"></script>
+  <script src="maincss/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="maincss/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="maincss/vendor/php-email-form/validate.js"></script>
+  <script src="maincss/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="maincss/vendor/counterup/counterup.min.js"></script>
+  <script src="maincss/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="maincss/vendor/venobox/venobox.min.js"></script>
+  <script src="maincss/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="maincss/vendor/typed.js/typed.min.js"></script>
+  <script src="maincss/vendor/aos/aos.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="maincss/js/main.js"></script>
 
 </body>
 
