--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link href="maincss\css\style.css" rel="stylesheet">
  
 </head>
-<body>
+<body oncontextmenu="return false">
 
   <!-- ======= Mobile nav toggle button ======= -->
   <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
