--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </header><!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <img src="D:/My Folder1/maincss/img/hero.jpg" class="heroimg">
+    <img src="maincss/img/hero.jpg" class="heroimg">
     <div class="hero-container" data-aos="fade-in">
     <h1>Habib Ullah</h1>
     <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p></p>
