--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
               </div>
             </div>
             <p>
-              I am a Bs IT student but website design & Development was my hobby but now I have made it my profession with my hard 
-            work. I am Certified  Web developer from Aptech Institute. I am improving and polishing my skills daily. <br>
-            I have command in Java And C Programming languge too.
+              I am student Of Bs IT but website design & Development was my interest but now I changed my interest into My profession with my hard working.have made it my profession with my hard , I am Certified  Web developer from Aptech Institute. I am improving and polishing my skills daily. <br>
+      
             </p>
           </div>
         </div>
@@ -132,8 +131,8 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Honestly, As I mentioned above, I'm a beginner so I haven't done any <b> paid</b> tasks yet. so i don't have paid client's 
-            contacts or reviews for portfolio here. But if you give me a chance, I will never disappoint you inshallah</p>
+          <p> As I mentioned above, I'm a beginner so I haven't done any <b> paid</b> tasks yet. so i don't have paid client's 
+            reviews for portfolio here. But if you give me a chance, I will never disappoint you inshallah</p>
 
         </div>
         <div class="row no-gutters">
