--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello!! My Self Muhammad Habibullah,i'm from Karachi Pakistan.I am student Of bachelors In Information Technology at
-          Benazir Bhutoo shaheed University.Now Its My begginer Level Of Web development .So forgive me if you find something wrong or mistakes there, i just believe in hard & smart working.</p>
+          <p>Hello,Assalm-o-alikum !!My Self Muhammad Habib,Belong To Gilgit/Baltistan,Currently Living at Karachi Pakistan.Doing bachelors In Information Technology from
+          Benazir Bhutoo shaheed University(karachi).
+          I'm a certified Front-End Web Developer from APTECH INSTITUTE with High ranks</p>
         </div>
         
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="maincss\img\habibi.jpg" class="img-fluid" alt="habib" >
+            <img src="maincss\img\my.jpg" class="img-fluid" alt="habib" >
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3>
@@ -116,7 +117,8 @@
               </div>
             </div>
             <p>
-              I am student Of Bs IT but website design & Development was my interest but now I changed my interest into My profession with my hard working.have made it my profession with my hard , I am Certified  Web developer from Aptech Institute. I am improving and polishing my skills daily. <br>
+              I can create an attractive and impressive website with my User interface(Ui) skill,And a complete responsive for mobile and other screens.Give me a chance,i will never
+              dissapointed you.<br>
       
             </p>
           </div>
@@ -131,8 +133,10 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p> As I mentioned above, I'm a beginner so I haven't done any <b> paid</b> tasks yet. so i don't have paid client's 
-            reviews for portfolio here. But if you give me a chance, I will never disappoint you inshallah</p>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commod
+                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
 
         </div>
         <div class="row no-gutters">
@@ -298,11 +302,11 @@
                 <p>I am Ms Office Certified and have an Excellent Experiance in Ms Office</p>
             </div>
             <div class="resume-item">
-              <h4>website Desiging Certified</h4>
+              <h4>website development Certified</h4>
               <h5>2020</h5>
               <p>From;<em><b>Aptech Institues Of Learning</b></em></p>
               <p><em>
-                I am web Designing certified from Aptech Instituete  
+                I am web development certified from Aptech Instituete  
               </em></p>
             </div>
             <div class="resume-item">
